[package]
name = "trampoline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
blake2b-rs = "0.2.0"
bytes = "1.1.0"
ckb-always-success-script = "0.0.1"
ckb-app-config = "0.101.4"
ckb-chain-spec = "0.101.4"
ckb-crypto = "0.101.4"
ckb-error = "0.101.4"
ckb-hash = "0.101.4"
ckb-jsonrpc-types = "0.101.4"
ckb-resource = "0.101.4"
ckb-script = "0.101.4"
ckb-system-scripts = "0.5.4"
ckb-traits = "0.101.4"
ckb-types = "0.101.4"
ckb-util = "0.101.4"
ckb-verification = "0.101.4"
hex = "0.4.3"
includedir = "0.6.0"
jsonrpc-core = "18.0.0"
lazy_static = "1.4.0"
molecule = "0.7.2"
molecule-codegen = "0.7.2"
phf = "0.8.0"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
structopt = "0.3.26"
tera = "1.15.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
toml = "0.5.8"
walkdir = "2.3.2"
trampoline-sdk = {path = "./sdk"}
secp256k1 = "0.19.0"
rpassword = "6.0.1"


[build-dependencies]
includedir_codegen = "0.6.0"

 [workspace]
 members = ["sdk"]

[dev-dependencies]
tempfile = "3.3.0"
 #members = ["sdk", "validity-lang"]
