[package]
name = "trampoline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
blake2b-rs = "0.2.0"
bytes = "1.1.0"
ckb-app-config = { version = "0.103.0" }
ckb-chain-spec = { version = "0.103.0" }
ckb-crypto = { version = "0.103.0", features = ["secp"] }
ckb-error = { version = "0.103.0" }
ckb-hash = { version = "0.103.0" }
ckb-jsonrpc-types = { version = "0.103.0" }
ckb-resource = { version = "0.103.0" }
ckb-script = { version = "0.103.0" }
ckb-system-scripts = { version = "0.5.4" }
ckb-traits = { version = "0.103.0" }
ckb-types = { version = "0.103.0" }
ckb-util = { version = "0.103.0" }
ckb-verification = { version = "0.103.0" }
ckb-always-success-script = "0.0.1"
hex = "0.4.3"
includedir = "0.6.0"
jsonrpc-core = "18.0.0"
lazy_static = "1.4.0"
molecule = "0.7.2"
molecule-codegen = "0.7.2"
phf = "0.8.0"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
structopt = "0.3.26"
tera = "1.15.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
toml = "0.5.8"
walkdir = "2.3.2"
trampoline-sdk = { path = "./sdk", features = ["std"], default-features = true }
bollard = "0.13.0"
tokio-stream = "0.1.9"


[build-dependencies]
includedir_codegen = "0.6.0"

[workspace]
members = ["sdk", "sdk/utils"]
#members = ["sdk", "validity-lang"]
