[package]
name = "trampoline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
blake2b-rs = "0.2.0"
bytes = "1.2.0"
ckb-app-config = "0.104.0"
ckb-chain-spec = "0.104.0"
ckb-crypto = { version = "0.104.0", features = ["secp"] }
ckb-error = "0.104.0"
ckb-hash = "0.104.0"
ckb-jsonrpc-types = "0.104.0"
ckb-resource = "0.104.0"
ckb-script = "0.104.0"
ckb-system-scripts = "0.5.4"
ckb-traits = "0.104.0"
ckb-types = "0.104.0"
ckb-util = "0.104.0"
ckb-verification = "0.104.0"
ckb-always-success-script = "0.0.1"
hex = "0.4.3"
includedir = "0.6.0"
jsonrpc-core = "18.0.0"
lazy_static = "1.4.0"
molecule = "0.7.3"
molecule-codegen = "0.7.3"
phf = "0.8.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
structopt = "0.3.26"
tera = "1.16.0"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
walkdir = "2.3.2"
trampoline-sdk = { path = "./sdk", features = ["std"], default-features = true }
bollard = "0.13.0"
tokio-stream = "0.1.9"


[build-dependencies]
includedir_codegen = "0.6.0"

[workspace]
members = ["sdk", "sdk/utils"]
#members = ["sdk", "validity-lang"]
