[package]
name = "trampoline-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.56"}
blake2b-rs = { version = "0.2.0"}
bytes = { version = "1.1.0"}
ckb-always-success-script = { version = "0.0.1"}
ckb-app-config = { version = "0.103.0"}
ckb-chain-spec = { version = "0.103.0"}
ckb-crypto = { version = "0.103.0", features = ["secp"] }
ckb-error = { version = "0.103.0"}
ckb-hash = { version = "0.103.0"}
ckb-jsonrpc-types = { version = "0.103.0"}
ckb-resource = { version = "0.103.0"}
ckb-script = { version = "0.103.0"}
ckb-system-scripts = { version = "0.5.4"}
ckb-traits = { version = "0.103.0"}
ckb-types = { version = "0.103.0"}
ckb-util = { version = "0.103.0"}
ckb-verification = { version = "0.103.0"}
ckb-sdk = {git = "https://github.com/nervosnetwork/ckb-sdk-rust"}
hex = { version = "0.4.3"}
includedir = { version = "0.6.0"}
jsonrpc-core = { version = "18.0.0"}
molecule = { version = "0.7.2", default-features = false }
molecule-codegen = { version = "0.7.2"}
phf = { version = "0.10.1"}
rand = { version = "0.8.5"}
reqwest = { version = "0.11.10", features = ["json", "blocking"]}
serde = { version = "1.0.136", features = ["derive"]}
serde_json = { version = "1.0.79"}
structopt = { version = "0.3.26"}
thiserror = { version = "1.0.30"}
tokio = { version = "1.17.0", features = ["full"]}
toml = { version = "0.5.8"}
walkdir = { version = "2.3.2"}
ckb-standalone-types = { version = "0.1.2", default-features = false}
secp256k1 = { version = "0.20", features = ["recovery"] }
lru = "0.7.6"

