[package]
name = "trampoline-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
anyhow = "1.0.57"
ckb-crypto = "0.103.0"
ckb-fixed-hash = "0.103.0"
ckb-hash = "0.103.0"
ckb-sdk = "1.0.1"
ckb-types = "0.103.0"
ctr = "0.9.1"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
pbkdf2 = "0.11.0"
rand = "0.8.5"
secp256k1 = "0.22.1"
serde = "1.0.137"
serde_json = "1.0.81"
sha2 = "0.10.2"
tempfile = "3.3.0"
thiserror = "1.0.31"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
