[package]
name = "trampoline-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
anyhow = "1.0.58"
ckb-crypto = "0.103.0"
ckb-fixed-hash = "0.103.0"
ckb-hash = "0.103.0"
ckb-sdk = {git = "https://github.com/nervosnetwork/ckb-sdk-rust"}
ckb-types = "0.103.0"
ctr = "0.9.1"
hex = "0.4.3"
hmac = "0.12.1"
json = "0.12.4"
lazy_static = "1.4.0"
pbkdf2 = "0.11.0"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
reqwest = "0.11.11"
secp256k1 = { version = "0.20.0", features = ["recovery"] }
serde = "1.0.138"
serde_json = "1.0.82"
sha2 = "0.10.2"
tempfile = "3.3.0"
testcontainers = "0.14.0"
thiserror = "1.0.31"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
