[package]
name = "{{PROJECT_NAME}}-schemas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
molecule = { version = "0.7.2", default-features = false }
no-std-compat = { version = "0.4.1", features = [
    "alloc",
    "compat_macros",
    "compat_hash",
] }
trampoline-sdk = { git = "https://github.com/Tempest-Protocol/trampoline", branch = "develop", default-features = false }
ckb-jsonrpc-types = { version = "0.104.0", optional = true }

[features]
default = ["std"]
std = ["trampoline-sdk/std", "molecule/std", "ckb-jsonrpc-types"]
script = ["trampoline-sdk/script"]
